# linkedin-agent

./: .env.example  .gitignore  README.md  pyproject.toml
output/: .gitkeep
src/linkedin_agent/: cli.py  config.py  image_gen.py  llm.py  templates.py
templates/: comment.txt  image.txt  post.txt
